--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 spring.profiles.active=prod
-
+logging.level.com.example.largefilereadingchallenge.aspect.LoggingAspect=DEBUG
